--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
     "html-entities": "^2.5.2",
     "npm": "^10.8.3",
