--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui": "^5.3.2",
     "@coreui/icons": "^3.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
