--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - CACHE_DRIVER=file
       - SESSION_DRIVER=file
       - QUEUE_CONNECTION=sync
+      - DB_SEEDED=${DB_SEEDED:-false}
     volumes:
       - .:/var/www/html
       - ./storage:/var/www/html/storage
@@ -57,7 +58,7 @@ services:
       dockerfile: ../docker/admin-panel/Dockerfile
     container_name: ticketing_admin_panel
     environment:
-      - VITE_API_URL=${API_URL:-http://localhost:8000}
+      - VITE_API_BASE_URL=${API_URL:-http://localhost:8080}
     volumes:
       - ./admin-panel:/app
       - /app/node_modules
@@ -115,11 +116,13 @@ services:
     container_name: ticketing_nginx
     ports:
       - "80:80"
+      - "8080:80"
       - "443:443"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/conf.d:/etc/nginx/conf.d
       - ./storage/logs:/var/log/nginx
+      - .:/var/www/html
     depends_on:
       - laravel
       - admin_panel
