--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,24 @@
-APP_NAME=Laravel
-APP_ENV=local
+# Application 
+APP_NAME="Ticketing System" 
+APP_ENV=local 
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=true 
+APP_URL=http://IP-ADDRESS-HERE:8000
+APP_TIMEZONE=UTC 
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+# Database 
+DB_CONNECTION=pgsql 
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432 
+DB_DATABASE=your_database_nmae 
+DB_USERNAME=your_username 
+DB_PASSWORD=your_password 
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=loggit
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -29,12 +32,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=465
+MAIL_USERNAME=api
+MAIL_PASSWORD=695e9f7c2e71524e0706f3075476132d
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="no-reply@demomailtrap.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -57,3 +60,12 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PEPPER_HASH=Jw3l1CmsByK1ngB@ut1st@
+
+L5_SWAGGER_GENERATE_ALWAYS=true
+L5_SWAGGER_CONST_HOST=http://127.0.0.1:8000
+L5_SWAGGER_CONST_VERSION=1.0.0
+L5_SWAGGER_CONST_BASE_PATH=/api
+L5_SWAGGER_CONST_TITLE="Ticketing System API"
+L5_SWAGGER_CONST_DESCRIPTION="API documentation for my Ticketing System project"
