--- a/client-side-service/package.json
+++ b/client-side-service/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "config": "node generate-frontend-config.js",
+    "set-ip": "node set-ip.js"
   },
   "keywords": ["printer", "display", "pd300", "service", "cashier", "client"],
   "author": "",
