--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Application 
 APP_NAME="Ticketing System" 
 APP_ENV=local 
-APP_KEY=
+APP_KEY=base64:CgBkpVM3Y+A18UOIxtJM1mefooUPBNSNYPTMYbDfXlA= 
 APP_DEBUG=true 
-APP_URL=http://IP-ADDRESS-HERE:8000
+APP_URL=http://127.0.0.1:8000
 APP_TIMEZONE=UTC 
 
 LOG_CHANNEL=stack
@@ -11,12 +11,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Database 
-DB_CONNECTION=pgsql 
+DB_CONNECTION=mysql 
 DB_HOST=127.0.0.1
-DB_PORT=5432 
-DB_DATABASE=your_database_nmae 
-DB_USERNAME=your_username 
-DB_PASSWORD=your_password 
+DB_PORT=3306 
+DB_DATABASE=deltrans
+DB_USERNAME=root 
+DB_PASSWORD=
 
 BROADCAST_DRIVER=loggit
 CACHE_DRIVER=file
