--- a/env.example
+++ b/env.example
@@ -5,12 +5,12 @@
 APP_ENV=local
 
 # Database Configuration
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_PORT=3306
 DB_DATABASE=ticketing_system
-DB_USERNAME=ticketing_user
-DB_PASSWORD=ticketing_password
+DB_USERNAME=root
+DB_PASSWORD=
 
 # API Configuration
 API_URL=http://localhost:8000
